--- a/multimap/index_lokal.html
+++ b/multimap/index_lokal.html
@@ -37,10 +37,11 @@
     <script src="lib/L.Control.Zoomslider.js"></script>
 	<script src="lib/L.Control.Locate.js"></script>
 	<script src="lib/Leaflet.Coordinates-0.1.5.min.js"></script>
-	<!-- other plugins -->
+	<!-- other plugins 
 	<script src="lib/leaflet-google.js"></script>
 	<script src="http://maps.google.com/maps/api/js?v=3.2&sensor=false"></script>
 	<script src="lib/layer/tile/Bing.js"></script>
+    -->
 	<!-- old stuff
 	<script src="lib/TileLayer.Bing.js"></script>
 	<script src="lib/leaflet-compass.min.js"></script>
@@ -170,6 +171,7 @@
 		
 		//main function
 		// create opentopomap layer
+		/*
 		var layerAdrTopo="http://{s}.tile.opentopomap.org/{z}/{x}/{y}.png"
 		var layerOpenTopo = new L.TileLayer(layerAdrTopo,{maxZoom: maxzoom_topo, maxNativeZoom: maxzoom_topo-1, detectRetina: true, attribution: 'Kartendaten: Kartendaten: © <a href="https://openstreetmap.org/copyright">OpenStreetMap</a>-Mitwirkende, SRTM | Kartendarstellung: © <a href="http://opentopomap.org">OpenTopoMap</a>'});
 		
@@ -392,7 +394,7 @@
 		//var layerAtlasOnlinePol = new L.TileLayer(layerAdrAtlasOnlinePol,{maxZoom: maxzoom_std,detectRetina: true, attribution: 'Kartendaten: © <a href="http://www.weltatlas-online.de/">Weltatlas-Online</a>'});
 //        var layerYandex = new L.TileLayer("http://vec0{s}.maps.yandex.net/tiles?l=map&v=2.26.0&x={x}&y={y}&z={z}&lang=en-US",
 //                {maxZoom: maxzoom_esri_sat,detectRetina: true, subdomains: '1234', attribution: 'Kartendaten: © Yandex'});
-
+*/
             //lokale tiles
 		var layerAdrBasemapLocal="tilecache-bs/{z}/{y}/{x}.png"
 		var layerBasemapLocal = new L.TileLayer(layerAdrBasemapLocal,
@@ -427,85 +429,85 @@
 		var grid = L.grid({redraw: 'moveend'});
 		
 		var baseMaps = [
-			{groupName : "OSM Standard",
-				expanded : false,
-				layers    : {
-					"Mapsurfer": layerMapSurfer,
-					"Mapquest Open": layerMapquest,
-					"OpenStreetMap Standard": layerOSMStd,
-					"Mapbox Standard": layerMapBox,
-					"OpenStreetMap Lyrk Geodienste": layerOSMLyrk,
-					"OpenStreetMap Deutschland": layerOSMStdDe,
-					"OpenStreetBrowser": layerOpenStreetBrowser,
-				}
-			},
-			{groupName : "Standard Karten",
-				expanded : false,
-				layers    : {
-					"Basemap AT": layerGrpBasemVd,
-					"Apple Standard": layerAppleStd,
-					"Nokia Here-maps": layerNokiaRoad,
-					"Bing Standard":  bing_road,
-					"Google Standard": g_roadmap,
-					"Tomtom Standard": layerTomtom,
-					"Esri Street Map": layerEsriStreet,
-					"National Geographic Countries": layerNatGeoWorld,
-					"Mapbox Political":layerMapBoxCtry,
-				}
-			},
-			{groupName : "Topographische",
-				expanded : false,
-				layers    : {
-					"OpenTopoMap": layerOpenTopo,
-					"Mapbox Terrain": layerMapBoxTerr,
-					"Geofabrik Topo": layerGeofTopo,
-					"OpenStreetMap Landscape": layerOSMLands,
-					"OpenStreetMap Outdoors": layerOSMOutd,
-					"ÖK (Bergfex)":layerBergfexOek,
-					"OSM (Bergfex)": layerBergfexOsm,
-					"AustriaMap (Bergfex)": layerBergfexAmapGrp,
-					"Esri Topo Map": layerEsriTopo,
-					"Nokia Here-maps Terrain": layerNokiaTerr,
-					"Google Terrain":  g_terrain,
-				}
-			},
-			{groupName : "Themen und Diverse",
-				expanded : false,
-				layers    : {
-					"Openstreetmap Humanitarian": layerHumanitarian,
-					"Thunderforest Transport":layerOSMTransp,
-					"ÖPNV Verkehrskarte": layerÖPNV,
-					"OpenStreetMap Cycle": layerOSMCycle,
-					"Hike and Bike": layerHikeBike,
-					"Esri light gray": layerEsriGray,
-					"Stamen Watercolor": layerStamenWaterc,
-					"Mapbox Pirate Map": layerMapBoxPirate,
-					"Mapbox Bluemarbel 8 bit": layerMapBoxBlm8bit,
-					"Mapbox Populationfire": layerMapBoxPopFire,
-				}
-			},
-			{groupName : "Satellit",
-				expanded : false,
-				layers    : {
-					"Apple Satellit": layerAppleSat,
-					"Nokia Here-maps Satellit": layerNokiaSat,
-					"Bing Satellit":  bing_areal,
-					"Google Satellit":  g_satellite,
-					"Mapquest Satellit": layerMapquestSat,
-					"Mapbox Satellit":layerMapBoxSat,
-					"Esri Satellit": layerEsriWldImg,
-					"Basemap Orthofoto": layerBasemOrtho,
-				}
-			},
-			{groupName : "Satellit (Hybrid)",
-				expanded : false,
-				layers    : {
-					"Nokia Here-maps Hybrid": layerNokiaHybrid,
-					"Bing Hybrid":  bing_areal_label,
-					"Google Hybrid": g_hybrid,
-					"Mapbox Hybrid":layerMapBoxHybr,
-				}
-			},
+			// {groupName : "OSM Standard",
+			// 	expanded : false,
+			// 	layers    : {
+			// 		"Mapsurfer": layerMapSurfer,
+			// 		"Mapquest Open": layerMapquest,
+			// 		"OpenStreetMap Standard": layerOSMStd,
+			// 		"Mapbox Standard": layerMapBox,
+			// 		"OpenStreetMap Lyrk Geodienste": layerOSMLyrk,
+			// 		"OpenStreetMap Deutschland": layerOSMStdDe,
+			// 		"OpenStreetBrowser": layerOpenStreetBrowser,
+			// 	}
+			// },
+			// {groupName : "Standard Karten",
+			// 	expanded : false,
+			// 	layers    : {
+			// 		"Basemap AT": layerGrpBasemVd,
+			// 		"Apple Standard": layerAppleStd,
+			// 		"Nokia Here-maps": layerNokiaRoad,
+			// 		"Bing Standard":  bing_road,
+			// 		"Google Standard": g_roadmap,
+			// 		"Tomtom Standard": layerTomtom,
+			// 		"Esri Street Map": layerEsriStreet,
+			// 		"National Geographic Countries": layerNatGeoWorld,
+			// 		"Mapbox Political":layerMapBoxCtry,
+			// 	}
+			// },
+			// {groupName : "Topographische",
+			// 	expanded : false,
+			// 	layers    : {
+			// 		"OpenTopoMap": layerOpenTopo,
+			// 		"Mapbox Terrain": layerMapBoxTerr,
+			// 		"Geofabrik Topo": layerGeofTopo,
+			// 		"OpenStreetMap Landscape": layerOSMLands,
+			// 		"OpenStreetMap Outdoors": layerOSMOutd,
+			// 		"ÖK (Bergfex)":layerBergfexOek,
+			// 		"OSM (Bergfex)": layerBergfexOsm,
+			// 		"AustriaMap (Bergfex)": layerBergfexAmapGrp,
+			// 		"Esri Topo Map": layerEsriTopo,
+			// 		"Nokia Here-maps Terrain": layerNokiaTerr,
+			// 		"Google Terrain":  g_terrain,
+			// 	}
+			// },
+			// {groupName : "Themen und Diverse",
+			// 	expanded : false,
+			// 	layers    : {
+			// 		"Openstreetmap Humanitarian": layerHumanitarian,
+			// 		"Thunderforest Transport":layerOSMTransp,
+			// 		"ÖPNV Verkehrskarte": layerÖPNV,
+			// 		"OpenStreetMap Cycle": layerOSMCycle,
+			// 		"Hike and Bike": layerHikeBike,
+			// 		"Esri light gray": layerEsriGray,
+			// 		"Stamen Watercolor": layerStamenWaterc,
+			// 		"Mapbox Pirate Map": layerMapBoxPirate,
+			// 		"Mapbox Bluemarbel 8 bit": layerMapBoxBlm8bit,
+			// 		"Mapbox Populationfire": layerMapBoxPopFire,
+			// 	}
+			// },
+			// {groupName : "Satellit",
+			// 	expanded : false,
+			// 	layers    : {
+			// 		"Apple Satellit": layerAppleSat,
+			// 		"Nokia Here-maps Satellit": layerNokiaSat,
+			// 		"Bing Satellit":  bing_areal,
+			// 		"Google Satellit":  g_satellite,
+			// 		"Mapquest Satellit": layerMapquestSat,
+			// 		"Mapbox Satellit":layerMapBoxSat,
+			// 		"Esri Satellit": layerEsriWldImg,
+			// 		"Basemap Orthofoto": layerBasemOrtho,
+			// 	}
+			// },
+			// {groupName : "Satellit (Hybrid)",
+			// 	expanded : false,
+			// 	layers    : {
+			// 		"Nokia Here-maps Hybrid": layerNokiaHybrid,
+			// 		"Bing Hybrid":  bing_areal_label,
+			// 		"Google Hybrid": g_hybrid,
+			// 		"Mapbox Hybrid":layerMapBoxHybr,
+			// 	}
+			// },
 			{groupName : "Lokale Karten",
 				expanded : true,
 				layers    : {
@@ -515,24 +517,24 @@
 			}
 		]
 		var overlayMaps = [
-			 {groupName : "Beschriftungen",
-					expanded : false,
-					layers    : {
-						"Mapquest Beschriftungen": layerOSMOvl,
-						"Mapsurfer Beschriftungen": layerMapSurferOvl,
-						"Apple Beschriftungen": layerAppleOverlay,
-						"Nokia Heremaps Beschriftungen":layerNokiaLabel,
-						"Basemap Beschriftungen": layerBasemOvl,
-					}
-			 },
+			 // {groupName : "Beschriftungen",
+				// 	expanded : false,
+				// 	layers    : {
+				// 		"Mapquest Beschriftungen": layerOSMOvl,
+				// 		"Mapsurfer Beschriftungen": layerMapSurferOvl,
+				// 		"Apple Beschriftungen": layerAppleOverlay,
+				// 		"Nokia Heremaps Beschriftungen":layerNokiaLabel,
+				// 		"Basemap Beschriftungen": layerBasemOvl,
+				// 	}
+			 // },
 			{groupName : "Diverse Overlays",
 				expanded : true,
 				layers    : {
-					"Mapsurfer Administrative Grenzen": layerMapSurferAdminOvl,
-					"Harvard Internationale Grenzen":layerHarvWld,
-					"Mapsurfer Hillshade": layerMapSurferHillOvl,
-					"OSM Terrain": layerOpPisteMapLandsh,
-					"OSM Schipisten": layerOpPisteMap,
+					// "Mapsurfer Administrative Grenzen": layerMapSurferAdminOvl,
+					// "Harvard Internationale Grenzen":layerHarvWld,
+					// "Mapsurfer Hillshade": layerMapSurferHillOvl,
+					// "OSM Terrain": layerOpPisteMapLandsh,
+					// "OSM Schipisten": layerOpPisteMap,
 					"Gradnetz": grid,
 					"Basemap Beschriftung (lokal)":layerBasemapOvlLocal,
 				}
@@ -591,7 +593,7 @@
 		//subdomains: '1234', 
 		attribution: 'Kartendaten: © <a href="http://korona.geog.uni-heidelberg.de/">Mapsurfer</a>' });
 		
-		var miniMap = new L.Control.MiniMap(miniMapLayer, { toggleDisplay: true, zoomLevelOffset: -7 }).addTo(map);
+		var miniMap = new L.Control.MiniMap(miniMapLayer, { toggleDisplay: true, zoomLevelOffset: -4 }).addTo(map);
 		
 		map.on('moveend', function(e) {
 			lock=true;
